--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Title of the article" />
     <meta property="og:image" content="nycapp.png" />
+    <meta property=" og:description" content="Nyc violation search app" />
+    <meta property=" og:url" content="https://nyc-violation.netlify.com" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
